# DProvenanceKitPython

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  RELEASING.md  docker-compose.yml  init_orig.py  pyproject.toml  pyproject_orig.toml  record_example.py
.github/workflows/: ci.yml  publish-pypi.yml
action/: README.md  action.yml  pr_comment.py  run_anomalies.py  run_gate.py
conformance/: README.md  TRACE_SPEC_v1.md  conformance_event.py  generate_vectors.py
conformance/vectors/: alignment_verdict.json  payload_encoding.json  profile_hash.json  query_semantics.json  run_fingerprint.json
demo/: demo.tape  demo_gif.py
deploy/: .env.example  Caddyfile  DEPLOY.md  docker-compose.yml
docs/: CNAME  index.html
docs/openai-agents/: index.html
dprovenancekit/: __init__.py  alignment_config.py  alignment_contract.py  alignment_evidence.py  alignment_findings.py  alignment_matcher.py  alignment_models.py  alignment_render.py  anomaly.py  benchmark.py  cli.py  config.py  context.py  corpus.py  drop_stats.py  event.py  facade.py  graph.py  index.html  instrument.py  perturbation.py  priority.py  pytest_plugin.py  query.py  raw_store.py  sqlite_store.py  store.py  ui_server.py  verification.py  viewmodel.py  visualizer.py  write_buffer.py
dprovenancekit/integrations/: __init__.py  fastapi.py  google_genai.py  jupyter.py  langchain.py  llama_index.py  mcp.py  openai_agents.py
examples/: basic_agent_trace.py  demo-rules.json  end_to_end_demo.py  regression_testing.py
examples/ci/: github-workflow.yml  gitlab-workflow.yml
examples/pr_gate_demo/: agent.py  run_demo.sh  run_id_buggy.txt  run_id_golden.txt
gitlab/: README.md  dprovenancekit.gitlab-ci.yml  mr_note.py
server/: README.md  admin.py  dprov_gate.py  run.py
server/dprov_server/: __init__.py  __main__.py  admin.py  app.py  billing.py  dashboard.html  http_app.py  storage.py  tenancy.py
server/tests/: conftest.py  test_server.py  test_visualizer_endpoints.py
src/dprovenancekit/: __init__.py  alignment_config.py  alignment_contract.py  alignment_engine.py  alignment_evidence.py  alignment_findings.py  alignment_interpreter.py  alignment_matcher.py  alignment_meta.py  alignment_models.py  alignment_narrative.py  alignment_render.py  alignment_semantics.py  alignment_snapshot.py  anomaly.py  benchmark.py  circuit_breaker.py  cli.py  cloud_store.py  config.py  context.py  corpus.py  diff.py  drop_stats.py  edge.py  event.py  graph.py  index.html  instrument.py  kit.py  live_engine.py  perturbation.py  priority.py  pytest_plugin.py  query.py  raw_store.py  render_hints.py  replay.py  report.py  rules.py  (+10 more)
src/dprovenancekit/integrations/: __init__.py  crewai.py  fastapi.py  google_genai.py  jupyter.py  langchain.py  (+3 more)
tests/: conftest.py  test_action_scripts.py  test_alignment_engine.py  test_benchmark_runner.py  test_cli_anomalies.py  test_cli_gate.py  test_cli_runs.py  test_cloud_chaos.py  test_cloud_store.py  test_conformance.py  test_corpus.py  test_diff_engine.py  test_end_to_end_demo.py  test_example_regression.py  test_explainability_auditor.py  test_facade.py  test_gitlab_mr_note.py  test_golden_workflow.py  test_identity_stability.py  test_in_memory_store.py  test_instrument.py  test_integration_langchain.py  test_integration_openai_agents.py  test_query_parity.py  test_raw_store_roundtrip.py  test_regression_gate.py  test_replay_engine.py  test_report.py  test_rules.py  test_snapshot_diff.py  test_span_tree.py  test_sqlite_encode_drop.py  test_sqlite_get_run.py  test_sqlite_insert_failure_drop.py  test_sqlite_stress.py  test_stability_evaluation.py  test_sync_client.py  test_trace_graph.py  test_visualizer.py  test_write_buffer.py
tests/integrations/: test_crewai.py  test_fastapi.py  test_jupyter.py  test_llama_index.py  test_mcp.py
