[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dprovenancekit"
version = "0.2.0"
description = "Reasoning observability and regression testing for AI systems — a Python port of DProvenanceKit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "DProvenanceKit" }]
keywords = ["observability", "ai", "agents", "tracing", "provenance", "regression"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# Pure standard library: sqlite3, contextvars, threading, json, hashlib, uuid, urllib.
dependencies = []

[project.optional-dependencies]
# langchain-core is included so CI exercises the LangChain + CrewAI integration
# tests instead of silently skipping them.
dev = ["pytest>=7.0", "fastapi", "httpx", "IPython", "pytest-asyncio", "langchain-core>=0.2"]
# Framework adapters. The core package stays pure standard library; these extras are only
# needed to wire DProvenanceKit into the corresponding framework.
langchain = ["langchain-core>=0.2"]
openai-agents = ["openai-agents>=0.1"]
llama-index = ["llama-index-core"]
crewai = ["crewai"]
google-genai = ["google-genai"]
fastapi = ["fastapi", "starlette"]
jupyter = ["ipython"]
mcp = ["mcp"]

[project.scripts]
dprovenancekit = "dprovenancekit.cli:main"

[project.entry-points.pytest11]
dprovenancekit = "dprovenancekit.pytest_plugin"

[project.urls]
Homepage = "https://github.com/Therealdk8890/DProvenanceKitPython"
Repository = "https://github.com/Therealdk8890/DProvenanceKitPython"
Issues = "https://github.com/Therealdk8890/DProvenanceKitPython/issues"
"Swift original" = "https://github.com/Therealdk8890/DProvenanceKit"

[tool.setuptools.package-data]
dprovenancekit = ["py.typed", "index.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["dprovenancekit*"]
